corrects z-index for codemirror autocomplete

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -5,9 +5,11 @@
 div.modal-dialog.google-visualization-charteditor-dialog{
   z-index: 100;
 }
-.CodeMirror-hint {
-  max-width: 30em;
+
+.CodeMirror-hints {
+  z-index: 100;
 }
+
 .navbar-inverse {
   background: #242438;
   padding-top: 0px;
