--- a/src/scss/scoped.scss
+++ b/src/scss/scoped.scss
@@ -1,4 +1,5 @@
 .wdqs-ui {
+  position:relative;
   @import "bootstrap.scss";
   @import "bootstrap-tags.css";
   @import "controlbar.scss";
